file.log
Processing d1_mini (platform: espressif8266; board: d1_mini; framework: arduino)
-------------------------------------------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif8266/d1_mini.html
PLATFORM: Espressif 8266 > WeMos D1 R2 & mini
HARDWARE: ESP8266 80MHz 80KB RAM (4MB Flash)
Library Dependency Finder -> http://bit.ly/configure-pio-ldf
LDF MODES: FINDER(chain) COMPATIBILITY(soft)
Collected 37 compatible libraries
Scanning dependencies...
Dependency Graph
|-- <CircularBuffer> 1.3.0
|-- <domoServer>
|   |-- <CircularBuffer> 1.3.0
|   |-- <esp8266FTPServer>
|   |   |-- <ESP8266WiFi> 1.0
|   |-- <ArduinoJson> 5.13.4
|   |-- <ESP_EEPROM> 2.0.0
|   |-- <Hash> 1.0
|   |-- <ESP8266WiFi> 1.0
|   |-- <TaskScheduler> 3.0.2
|   |-- <WebSockets> 2.1.2
|   |   |-- <SPI> 1.0
|   |   |-- <ESP8266WiFi> 1.0
|   |   |-- <Hash> 1.0
|   |   |-- <Ethernet(esp8266)> 1.0.4
|   |   |   |-- <SPI> 1.0
|   |-- <ESP8266WebServer> 1.0
|   |   |-- <ESP8266WiFi> 1.0
|-- <IRremoteESP8266> 2.5.4
|-- <TaskScheduler> 3.0.2
Compiling .pioenvs/d1_mini/lib671/domoServer/taskWifi.cpp.o
lib/domoServer/src/taskWifi.cpp:140:1: warning: "/*" within comment [-Wcomment]
/* if in AP mode start scan mode to see if last
^
lib/domoServer/src/taskWifi.cpp: In function 'bool setWiFi2EEprom(EEConf)':
lib/domoServer/src/taskWifi.cpp:27:1: warning: no return statement in function returning non-void [-Wreturn-type]
}
^
lib/domoServer/src/taskWifi.cpp: In constructor 'taskWifi::taskWifi(long unsigned int, long int, Scheduler*, const char*, bool*)':
lib/domoServer/src/taskWifi.cpp:184:54: error: ISO C++ forbids taking the address of an unqualified or parenthesized non-static member function to form a pointer to member function.  Say '&taskWifi::onConnect' [-fpermissive]
connectedEventHandler=WiFi.onStationModeConnected(&onConnect);
^
lib/domoServer/src/taskWifi.cpp:184:63: error: no matching function for call to 'ESP8266WiFiClass::onStationModeConnected(void (taskWifi::*)(const WiFiEventStationModeConnected&))'
connectedEventHandler=WiFi.onStationModeConnected(&onConnect);
^
lib/domoServer/src/taskWifi.cpp:184:63: note: candidate is:
In file included from /home/nicolas/.platformio/packages/framework-arduinoespressif8266/libraries/ESP8266WiFi/src/ESP8266WiFiSTA.h:28:0,
from /home/nicolas/.platformio/packages/framework-arduinoespressif8266/libraries/ESP8266WiFi/src/ESP8266WiFi.h:34,
from lib/domoServer/src/taskWifi.h:7,
from lib/domoServer/src/taskWifi.cpp:1:
/home/nicolas/.platformio/packages/framework-arduinoespressif8266/libraries/ESP8266WiFi/src/ESP8266WiFiGeneric.h:57:26: note: WiFiEventHandler ESP8266WiFiGenericClass::onStationModeConnected(std::function<void(const WiFiEventStationModeConnected&)>)
WiFiEventHandler onStationModeConnected(std::function<void(const WiFiEventStationModeConnected&)>);
^
/home/nicolas/.platformio/packages/framework-arduinoespressif8266/libraries/ESP8266WiFi/src/ESP8266WiFiGeneric.h:57:26: note:   no known conversion for argument 1 from 'void (taskWifi::*)(const WiFiEventStationModeConnected&)' to 'std::function<void(const WiFiEventStationModeConnected&)>'
*** [.pioenvs/d1_mini/lib671/domoServer/taskWifi.cpp.o] Error 1
============================================ [ERROR] Took 1.42 seconds ============================================
